--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -91,20 +91,7 @@ body {
     display: none;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 10px 0;
-    background: #000;
-    color: #fff;
-    z-index: 2;
-}
-
-footer p {
+#reproduce-section p {
     margin: 0;
     font-size: 10px;
 }
