--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,7 +20,7 @@ body {
 
 #request-input, #poc-output {
     width: 80vh;
-    height: 70vh;
+    height: 65vh;
     font-family: inherit;
     background-color: #222;
     color: #fff;
@@ -75,6 +75,7 @@ body {
     display: inline-block;
     padding: 8px;
     border: 2px dashed transparent;
+    margin-bottom: 10px;
 }
 
 #execute-button:hover {
